phase1, fix cont.

--- a/phase1-awakening.html
+++ b/phase1-awakening.html
@@ -20,9 +20,49 @@
     <!-- Divine Temple Core -->
     <script src="js/firebase-config.js"></script>
     <script src="js/auth-helper.js"></script>
+    <script src="js/premium-access-control.js"></script>
     <script src="js/header.js" defer></script>
 
-    <!-- Premium access is handled by phase1-awakening.js (single auth gate) -->
+    <!-- Premium Access Gate -->
+    <script>
+        function checkPremiumAccess() {
+            return new Promise(function (resolve) {
+                var checkId = setInterval(function () {
+                    if (typeof firebase !== 'undefined' && firebase.auth) {
+                        clearInterval(checkId);
+                        firebase.auth().onAuthStateChanged(async function (user) {
+                            if (!user) { resolve(false); return; }
+                            try {
+                                var doc = await firebase.firestore().collection('users').doc(user.uid).get();
+                                var d = doc.data() || {};
+                                var ok = d.isPremium || d.membershipStatus === 'premium' || d.paymentVerified;
+                                if (!ok) {
+                                    document.getElementById('accessDeniedOverlay').style.display = 'flex';
+                                    document.getElementById('loadingState').style.display = 'none';
+                                } else {
+                                    document.getElementById('accessDeniedOverlay').style.display = 'none';
+                                }
+                                resolve(!!ok);
+                            } catch (e) {
+                                console.error('Premium check error:', e);
+                                resolve(false);
+                            }
+                            var logoutBtn = document.getElementById('logoutBtn');
+                            if (logoutBtn) {
+                                logoutBtn.addEventListener('click', function () {
+                                    firebase.auth().signOut().then(function () {
+                                        window.location.href = 'dashboard.html';
+                                    });
+                                });
+                            }
+                        });
+                    }
+                }, 100);
+                setTimeout(function () { clearInterval(checkId); }, 6000);
+            });
+        }
+        checkPremiumAccess();
+    </script>
 
     <style>
         /* ─── VARIABLES ─────────────────────────────────────── */
@@ -247,67 +287,6 @@
         }
         .expand-btn:hover { background: rgba(245,158,11,.12); }
 
-        /* ─── ANSWER TEXTAREAS ─────────────────────────────── */
-        .question-block { margin-bottom: 1rem; }
-        .question-block li { list-style: none; margin-left: -1.25rem; }
-        .question-text { color: var(--text-secondary); line-height: 1.5; padding: .5rem 0; }
-        .answer-area {
-            width: 100%; min-height: 80px; padding: .75rem 1rem;
-            background: rgba(255,255,255,.03); border: 1px solid rgba(255,255,255,.1);
-            border-radius: 10px; color: var(--text-primary); font-family: 'Inter', sans-serif;
-            font-size: .9rem; line-height: 1.5; resize: vertical;
-            transition: border-color .3s, box-shadow .3s;
-        }
-        .answer-area:focus {
-            outline: none; border-color: rgba(139,92,246,.5);
-            box-shadow: 0 0 0 3px rgba(139,92,246,.15);
-        }
-        .answer-area::placeholder { color: rgba(255,255,255,.25); }
-        .answer-meta {
-            display: flex; justify-content: space-between; align-items: center;
-            margin-top: .35rem; font-size: .75rem; color: var(--text-muted);
-        }
-        .save-indicator { transition: opacity .3s; }
-        .save-indicator.saving { color: #F59E0B; }
-        .save-indicator.saved { color: #10b981; }
-        .char-count { opacity: .5; }
-        .answers-progress {
-            display: flex; align-items: center; gap: .5rem;
-            padding: .5rem .75rem; background: rgba(16,185,129,.08);
-            border-radius: 8px; font-size: .8rem; color: #10b981;
-            margin-bottom: 1rem;
-        }
-        .answers-progress-bar {
-            flex: 1; height: 4px; background: rgba(16,185,129,.2);
-            border-radius: 2px; overflow: hidden;
-        }
-        .answers-progress-fill {
-            height: 100%; background: #10b981; border-radius: 2px;
-            transition: width .3s ease;
-        }
-
-        /* ─── WORKBOOK DOWNLOAD ────────────────────────────── */
-        .workbook-section {
-            background: linear-gradient(135deg, rgba(139,92,246,.08), rgba(212,175,55,.08));
-            border: 1.5px solid rgba(212,175,55,.25); border-radius: 20px;
-            padding: 2rem; margin-bottom: 2.5rem; text-align: center;
-        }
-        .workbook-icon { font-size: 3rem; margin-bottom: .75rem; }
-        .workbook-title { font-size: 1.4rem; font-weight: 700; color: #D4AF37; margin-bottom: .5rem; }
-        .workbook-desc { color: var(--text-secondary); line-height: 1.6; margin-bottom: 1.25rem; max-width: 600px; margin-left: auto; margin-right: auto; }
-        .workbook-download-btn {
-            display: inline-flex; align-items: center; gap: .6rem;
-            padding: .9rem 2rem; background: linear-gradient(135deg, #D4AF37, #F59E0B);
-            color: white; border: none; border-radius: 12px; font-weight: 700;
-            font-size: 1rem; text-decoration: none; cursor: pointer;
-            transition: transform .2s, box-shadow .2s;
-        }
-        .workbook-download-btn:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 8px 24px rgba(212,175,55,.35);
-        }
-        .workbook-note { font-size: .8rem; color: var(--text-muted); margin-top: .75rem; }
-
         /* ─── NEXT PHASE PREVIEW ────────────────────────────── */
         .next-phase {
             margin-top: 3rem; padding: 2rem;
@@ -362,37 +341,31 @@
         /* ─── ACCESS DENIED ─────────────────────────────────── */
         .access-denied-overlay {
             position: fixed; top: 0; left: 0; width: 100%; height: 100%;
-            background: rgba(10, 10, 25, 0.75);
-            backdrop-filter: blur(8px); -webkit-backdrop-filter: blur(8px);
+            background: linear-gradient(135deg, rgba(15,15,35,.98), rgba(26,26,46,.98));
             display: flex; align-items: center; justify-content: center; z-index: 9999;
         }
         .access-denied-card {
             text-align: center;
-            background: linear-gradient(135deg, rgba(20,20,45,.95), rgba(30,25,50,.95));
-            border: 1px solid rgba(212,175,55,.3); border-radius: 22px;
-            padding: 2.5rem 2rem; max-width: 500px; margin: 1rem;
-            box-shadow: 0 20px 60px rgba(0,0,0,.5);
+            background: linear-gradient(135deg, rgba(139,92,246,.08), rgba(212,175,55,.08));
+            border: 2px solid var(--accent-purple); border-radius: 22px;
+            padding: 3rem; max-width: 480px;
         }
-        .access-denied-icon { font-size: 3rem; margin-bottom: 0.75rem; }
+        .access-denied-icon { font-size: 3.5rem; margin-bottom: 1rem; }
         .access-denied-card h2 {
-            font-size: 1.6rem; margin-bottom: 0.5rem;
+            font-size: 1.8rem; margin-bottom: 1rem;
             background: linear-gradient(135deg, var(--accent-purple), var(--accent-orange));
             -webkit-background-clip: text; background-clip: text; -webkit-text-fill-color: transparent;
         }
-        .access-denied-phase-label {
-            font-size: 0.85rem; text-transform: uppercase; letter-spacing: 2px;
-            color: var(--accent-orange); margin-bottom: 1rem; font-weight: 600;
-        }
-        .access-denied-card p { color: rgba(255,255,255,.7); margin-bottom: 1.5rem; line-height: 1.6; font-size: 0.95rem; }
-        .access-denied-buttons { display: flex; flex-direction: column; gap: 0.75rem; }
+        .access-denied-card p { color: var(--text-secondary); margin-bottom: 1.5rem; line-height: 1.6; }
+        .access-denied-buttons { display: flex; flex-direction: column; gap: 1rem; }
         .ad-btn {
-            padding: 0.9rem; border: none; border-radius: 12px;
-            font-weight: 600; cursor: pointer; transition: all .25s; text-decoration: none; display: block; text-align: center; font-size: 0.95rem;
+            padding: 1rem; border: none; border-radius: 12px;
+            font-weight: 700; cursor: pointer; transition: all .25s; text-decoration: none; display: block; text-align: center;
         }
         .ad-btn.upgrade { background: linear-gradient(135deg, var(--accent-orange), #D97706); color: white; }
         .ad-btn.upgrade:hover { transform: translateY(-2px); box-shadow: 0 8px 24px rgba(245,158,11,.3); }
-        .ad-btn.home { background: rgba(255,255,255,.06); color: rgba(255,255,255,.8); border: 1px solid rgba(212,175,55,.2); }
-        .ad-btn.home:hover { background: rgba(255,255,255,.1); }
+        .ad-btn.home { background: rgba(255,255,255,.08); color: var(--text-primary); border: 1px solid rgba(212,175,55,.25); }
+        .ad-btn.home:hover { background: rgba(255,255,255,.12); }
 
         /* ─── RESPONSIVE ────────────────────────────────────── */
         @media (max-width: 768px) {
@@ -413,14 +386,12 @@
     <!-- Access Denied (shown for non-premium users) -->
     <div id="accessDeniedOverlay" class="access-denied-overlay" style="display: none;">
         <div class="access-denied-card">
-            <div class="access-denied-icon">🌅</div>
-            <div class="access-denied-phase-label">Phase 1 · Awakening</div>
-            <h2>Unlock Your Journey</h2>
-            <p>Phase 1 guides you through the complete Ya Heard Me audiobook with reflection questions, journal prompts, and progress tracking. Upgrade to premium to begin your transformation.</p>
+            <div class="access-denied-icon">🔐</div>
+            <h2>Premium Access Required</h2>
+            <p>This sacred journey is exclusively for premium members. Upgrade to unlock Phase 1: Awakening and all premium content.</p>
             <div class="access-denied-buttons">
-                <a href="pricing.html" class="ad-btn upgrade">Upgrade to Premium</a>
-                <a href="members-new.html" class="ad-btn home">Sign In to Existing Account</a>
-                <a href="journey.html" class="ad-btn home">← Back to Journey Overview</a>
+                <a href="pricing.html" class="ad-btn upgrade">💎 Upgrade to Premium</a>
+                <a href="index.html" class="ad-btn home">← Back to Home</a>
             </div>
         </div>
     </div>
@@ -536,20 +507,6 @@
                         Open in Spotify
                     </a>
                 </div>
-            </div>
-
-            <!-- Workbook Download -->
-            <div class="workbook-section">
-                <div class="workbook-icon">📖</div>
-                <h2 class="workbook-title">Complete Divine Discernment Workbook</h2>
-                <p class="workbook-desc">
-                    Your sacred companion for this journey. Download the full workbook to deepen your practice offline, 
-                    or answer the reflection questions directly in each chapter below — your responses are saved automatically.
-                </p>
-                <a href="assets/Divine-Discernment-Workbook.pdf" download class="workbook-download-btn">
-                    ⬇ Download Full Workbook (PDF)
-                </a>
-                <p class="workbook-note">Premium member exclusive · 9 chapters of exercises, reflections, and practices</p>
             </div>
 
             <!-- Chapter Sections -->
